--- a/_config.yml
+++ b/_config.yml
@@ -40,10 +40,10 @@ round-avatar: false
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+# email: "yaaminiv@uw.edu"
+# facebook: deanattali
+  github: yaaminiv
+  twitter: YaaminiV
 #  patreon: DeanAttali
 #  reddit: yourname
 #  linkedin: daattali
@@ -60,12 +60,12 @@ social-network-links:
 #  telegram: yourname
 #  calendly: yourname
 #  mastodon: instance.url/@username
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
+  ORCID: https://orcid.org/0000-0002-0364-1829
+  google-scholar: https://scholar.google.com/citations?user=x9WA39wAAAAJ&hl=en&oi=sra
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: This website is a virtual proof that I'm awesome
+# rss-description: This website is a virtual proof that I'm awesome
 
 # --- General options --- #
 
@@ -78,7 +78,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "yaaminiv.github.io"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
