--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Yaamini R. Venkataraman
+title: Will this change the name
 
 # Your name to show in the footer
 author: Yaamini R. Venkataraman
