--- a/_config.yml
+++ b/_config.yml
@@ -190,7 +190,7 @@ date_format: "%B %-d, %Y"
 timezone: "America/Vancouver"
 markdown: kramdown
 highlighter: rouge
-permalink: /:year-:month-:day-:title/
+permalink: /:title/
 paginate: 5
 paginate_path: "/notebook/page:num/"
 
