--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ author: Yaamini R. Venkataraman
 
 navbar-links:
   About: "aboutme"
+  CV: "docs/Venkataraman_CV.pdf"
   Lab Notebook: "yaaminiv.github.io/LabNotebook"
   Publications:
   Communication:
