--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ round-avatar: false
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-# email: "yaaminiv@uw.edu"
+  email: "yaaminiv@uw.edu"
 # facebook: deanattali
   github: yaaminiv
   twitter: YaaminiV
