--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ round-avatar: false
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#title-img: /path/to/image
+title-img: /assets/img/Venkataraman_Headshot.jpg
 
 
 # --- Footer social media links --- #
