--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: Yaamini R. Venkataraman
 navbar-links:
   About: "aboutme"
   CV: "/assets/cv/Venkataraman_CV.pdf"
-  Lab Notebook: "yaaminiv.github.io/LabNotebook"
+  Lab Notebook: "notebook"
   Publications:
   Communication:
   Outreach:
