permalink for nb post title

--- a/_config.yml
+++ b/_config.yml
@@ -191,7 +191,7 @@ date_format: "%B %-d, %Y"
 timezone: "America/Vancouver"
 markdown: kramdown
 highlighter: rouge
-permalink: /:title/
+permalink: /:year-:month-:day-:title/
 paginate: 5
 paginate_path: "/notebook/page:num/"
 
